--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -56,7 +56,7 @@
 
 		div {
 			display: flex;
-			height: $input-height * 3;
+			height: $input-height;
 			align-items: center;
 		}
 
@@ -65,7 +65,7 @@
 			padding: 0;
 			margin: 0;
 			border-top: $active-border;
-			max-height: 150px;
+			max-height: $input-height * 3;
 
 			li {
 				display: flex;
