--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -5,7 +5,7 @@
 	.bd-dropdown-wrapper {
 		display: flex;
 		width: 100%;
-		height: $input-height;
+		height: $form-control-height;
 		background: $white;
 		border-bottom: $active-border;
 		outline: 0;
@@ -14,7 +14,7 @@
 
 		.bd-dropdown-label {
 			width: 80px;
-			color: $label-active;
+			color: $label-active-color;
 			text-align: right;
 			margin-right: 32px;
 
@@ -29,7 +29,7 @@
 			flex-grow: 1;
 
 			span {
-				color: $label-default;
+				color: $label-default-color;
 			}
 
 			.item-selected {
@@ -38,7 +38,7 @@
 			}
 
 		.bd-dropdown-icon {
-			color: $label-default;
+			color: $label-default-color;
 			margin-right: 17px;
 		}
 
@@ -56,7 +56,7 @@
 
 		div {
 			display: flex;
-			height: $input-height;
+			height: $form-control-height;
 			align-items: center;
 		}
 
@@ -65,11 +65,11 @@
 			padding: 0;
 			margin: 0;
 			border-top: $active-border;
-			max-height: $input-height * 3;
+			max-height: $form-control-height * 3;
 
 			li {
 				display: flex;
-				height: $input-height;
+				height: $form-control-height;
 				background: $white;
 				color: $black;
 				padding-left: 17px;
@@ -78,7 +78,7 @@
 
 				&.dropdown-header {
 					background: $white;
-					color: $label-default;
+					color: $label-default-color;
 					font-size: inherit;
 					border-top: $border;
 					border-bottom: $border;
