--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -29,7 +29,7 @@
 
 	&:focus {
 		&::placeholder {
-			color: $label-default;
+			color: $label-default-color;
 			opacity: 1;
 		}
 	}
@@ -47,7 +47,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 0 17px;
-	min-height: $input-height;
+	min-height: $form-control-height;
 	border-bottom: $border;
 	margin-bottom: 0;
 	flex-flow: row wrap;
@@ -56,8 +56,8 @@
 	.bd-label {
 		display: flex;
 		width: 80px;
-		height: $input-height;
-		color: $label-default;
+		height: $form-control-height;
+		color: $label-default-color;
 		font-size: $mini-font-size;
 		align-self: flex-start;
 		text-transform: uppercase;
@@ -84,7 +84,7 @@
 		.bd-input-prefix {
 			@include flex-element;
 			display: flex;
-			height: $input-height;
+			height: $form-control-height;
 			align-self: flex-start;
 			align-items: center;
 			justify-content: flex-end;
@@ -95,7 +95,7 @@
 		.bd-input-infix {
 			@include flex-element;
 			flex-grow: 1;
-			min-height: $input-height;
+			min-height: $form-control-height;
 
 			input {
 				@include input-textarea;
@@ -117,10 +117,10 @@
 	}
 
 	&.bd-focused {
-		border-bottom-color: $label-active;
+		border-bottom-color: $label-active-color;
 
 		.bd-label {
-			color: $label-active;
+			color: $label-active-color;
 		}
 	}
 
@@ -133,7 +133,7 @@
 		.bd-label {
 			width: auto;
 			margin: 0;
-			color: $dark-grey;
+			color: $label-default-color;
 			font-size: $default-font-size;
 			text-align: left;
 			flex-grow: 1;
@@ -158,7 +158,7 @@
 	.error-message {
 		@include flex-element;
 		background: $light-red;
-		color: $label-warning;
+		color: $label-warning-color;
 		text-align: left;
 
 		i {
@@ -167,10 +167,10 @@
 	}
 
 	.bd-input-wrapper {
-		border-bottom-color: $label-warning;
+		border-bottom-color: $label-warning-color;
 
 		.bd-label {
-			color: $label-warning;
+			color: $label-warning-color;
 		}
 	}
 }
