--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="customerForm">
 
-	<bd-input [labelText]="'Company Name'" formControlName="companyName" [errorText]="'Company name is required'">
+	<bd-input [labelText]="'Company Name'" formControlName="companyName" *ngIf="controlVisible('companyName')" [errorText]="'Company name is required'">
 	</bd-input>
 	<bd-dropdown [selectedValue]="selectedCustomerType" [items]="customerTypes">
 	</bd-dropdown>
@@ -12,6 +12,7 @@
 	</bd-input>
 	<address-form [group]='customerForm' [address]='customer.address'></address-form>
 	<div>
-		<button type="submit" [disabled]="!customerForm.valid">Submit</button>
+		<button type="submit" (click)="submit()" class="btn btn-primary">Submit</button>
+		<button (click)="changeMode()" class="btn">Change Mode</button>
 	</div>
 </form>
