--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -2,6 +2,7 @@
      [class.bd-focused]="_focused"
      [class.bd-collapsed-input]="isCollapsed"
      [class.bd-expanded-input]="!isCollapsed"
+     [class.bd-not-empty-label]="isEmptyLabel"
 >
         <div class="bd-label"
              [class.bd-hidden-label]="!isEmptyLabel">
