--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -1,15 +1,17 @@
 <form [formGroup]="addressForm">
 	<bd-input placeholder="Street address 1" formControlName="streetAddress">
 	</bd-input>
-	<div class="address-map-inpts-wrapper">
+	<div class="address-map-inputs-wrapper">
 		<div class="city-zip-state-second-address-wrapper">
 			<bd-input placeholder="Street address 2" formControlName="secondStreetAddress">
 			</bd-input>
 			<bd-input formControlName="city">
 			</bd-input>
-				<div style="display:flex;flex-direction:row;">
+				<div class="zip-state-wrapper">
+					<div class="address-state-wrapper">
 					<bd-input placeholder="State" formControlName="state">
 					</bd-input>
+					</div>
 					<bd-input placeholder="Zip" formControlName="zip">
 					</bd-input>
 				</div>
