added button component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,6 @@
             [rowHeight]="'auto'"
             [limit]="10">
         </datatable>
-
         <div style="width:500px; margin:100px auto;">
             <bd-input
                 placeholder=""
@@ -71,13 +70,21 @@
         [collapsibleInput]="true"
         [labelText]="'Estimated distance Estimated'">
         </bd-textarea>
+          <bd-button
+          type='primary'
+          >
+          </bd-button>
+          <bd-button
+          type='default'
+          >
+          </bd-button>
         </div>
     </first-pane>
 
     <second-pane>
 
     </second-pane>
-    
+
     <third-pane>
 
     </third-pane>
