FSPA-113 refactoring and remove odd code

--- a/src/app/forms/address-form/address-form.component.scss
+++ b/src/app/forms/address-form/address-form.component.scss
@@ -12,10 +12,10 @@
 	width: 40%;
 }
 
-.right-line {
+.right-border {
 	border-right: $border;
 }
 
-.bottom-line {
+.bottom-border {
 	border-bottom: $border;
 }
