--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -2,13 +2,13 @@
 	<bd-input placeholder="Street address 1" formControlName="streetAddress">
 	</bd-input>
 	<div class="section">
-		<div class="left-side right-line">
+		<div class="left-side right-border">
 			<bd-input placeholder="Street address 2" formControlName="secondStreetAddress">
 			</bd-input>
 			<bd-input formControlName="city">
 			</bd-input>
 			<div class="section">
-				<div class="right-line">
+				<div class="right-border">
 					<bd-input placeholder="State" formControlName="state">
 					</bd-input>
 				</div>
@@ -16,12 +16,12 @@
 				</bd-input>
 			</div>
 		</div>
-		<div class="right-side bottom-line">
+		<div class="right-side bottom-border">
 			google map
 		</div>
 	</div>
 	<div class="section">
-			<div class="left-side right-line">
+			<div class="left-side right-border">
 				<bd-input [labelText]="'phone'" formControlName="phone">
 				</bd-input>
 				<bd-input  [labelText]="'fax'" placeholder="fax" formControlName="fax">
