added button component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,10 +72,14 @@
         </bd-textarea>
           <bd-button
           type='primary'
+          [disabled]='true'
+          [value]="'first'"
           >
           </bd-button>
           <bd-button
+          [disabled]='false'
           type='default'
+          [value]="'second'"
           >
           </bd-button>
         </div>
