--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -11,14 +11,11 @@
 	<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId">
 	</bd-input>
 	<address-form [group]='customerForm' [address]='customer.address'></address-form>
-	<div>
-		<button type="submit" (click)="submit()" class="btn btn-primary">Submit</button>
-		<button (click)="changeMode()" class="btn">Change Mode</button>
-	</div>
 	<div class="section">
 		<bd-button
 		[disabled]='false'
 		type='default'
+		(click)="onCancel()"
 		[text]="'Cancel'"
 		class="bd-button"
 		>
@@ -27,6 +24,7 @@
 		type='primary'
 		class="bd-button"
 		[disabled]='false'
+		(click)="onSubmit()"
 		[text]="'Add Customer'"
 		>
 		</bd-button>
