--- a/src/app/shared/components/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-button/bd-button.component.scss
@@ -1,8 +1,11 @@
 @import '../../../../assets/styles/variables';
 
-.primary {
+.common {
 	width: 100%;
 	height: 50px;
+}
+
+.primary {
 	border: 0;
 	background: $blue;
 	color: $white;
@@ -13,8 +16,6 @@
 }
 
 .default {
-	width: 100%;
-	height: 50px;
 	border: $border;
 	background: $light-grey;
 	color: $black;
