FSPA-113 #comment fix form width issue

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wrapper">
   <template #customItemTemplate let-model="item" let-index="index">
       <div class="item-wrapper">
         <div class="left-panel">
