--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,5 +1,17 @@
 <multi-pane-layout>
     <first-pane>
+      <datatable
+          class='material striped'
+          [rows]='loads'
+          [columns]="columns"
+          [columnMode]="'force'"
+          [headerHeight]="50"
+          [footerHeight]="50"
+          [rowHeight]="'auto'"
+          [selectionType]="'single'"
+          (select)='onLoadSelect($event)'
+          [limit]="10">
+      </datatable>
     </first-pane>
 
     <second-pane>
