FSPA-130 #comment integrate loads grid woth laods form

--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -10,7 +10,7 @@
   <bd-input [ngModel]="value"
       (ngModelChange)="changeValue($event)"
       [typeahead]="source"
-      [collapsibleInput]="false"
+      [collapsibleInput]="true"
       [labelText]="labelText"
       [typeaheadItemTemplate]="itemTemplate"
       [typeaheadFooterTemplate]="footerTemplate"
