add labelText to dropdown

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -4,7 +4,7 @@
     class="bd-dropdown-wrapper"
     name="bd-dropdown-wrapper">
       <div class="bd-dropdown-label">
-        <label>{{defaultLabelText}}</label>
+        <label>{{labelText}}</label>
       </div>
       <div class="bd-dropdown-value" name="bd-dropdown-value">
         <span
