--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -7,11 +7,13 @@
   </bd-button-switch>
   <bd-dropdown
       *ngSwitchCase="false"
-      [defaultLabelText]="'contact'"
+      [defaultLabelText]="defaultLabelText"
+      [labelText]="labelText"
       [defaultTitleText]="'Select Contact'"
       [dropdownHeaderTemplate]="dropdownHeaderTemplate"
       [dropdownFooterTemplate]="dropdownFooterTemplate"
       [dropdownItemTemplate]="dropdownItemTemplate"
-      [items]="items">
+      [items]="items"
+      [selectedValue]="selectedValue">
   </bd-dropdown>
 </div>
