FSPA-125 #comment refactoring code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,6 +80,7 @@
         <bd-form-switch
           [enableButtonSwitch]="false"
           [labelText]="'contact'"
+          [defaultTitleText]="'Select contact'"
           [items]="items"
           [selectedValue]="items[0]">
         </bd-form-switch>
