--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -7,9 +7,8 @@
   </bd-button-switch>
   <bd-dropdown
       *ngSwitchCase="false"
-      [defaultLabelText]="defaultLabelText"
       [labelText]="labelText"
-      [defaultTitleText]="'Select Contact'"
+      [defaultTitleText]="defaultTitleText"
       [dropdownHeaderTemplate]="dropdownHeaderTemplate"
       [dropdownFooterTemplate]="dropdownFooterTemplate"
       [dropdownItemTemplate]="dropdownItemTemplate"
