--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,16 +1,19 @@
 <form [formGroup]="customerForm">
-
-	<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="controlVisible('name')" [errorText]="'Company name is required'">
-	</bd-input>
-	<bd-dropdown [defaultLabelText]="'Customer type'" [selectedValue]="selectedCustomerType" [items]="customerTypes">
-	</bd-dropdown>
-	<bd-dropdown [defaultLabelText]="'Status'" [selectedValue]="selectedCustomerStatus" [items]="customerStatuses">
-	</bd-dropdown>
-	<bd-input [labelText]="'MC #'" formControlName="mc">
-	</bd-input>
-	<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId">
-	</bd-input>
-	<address-form [group]='customerForm.controls.address' [address]='customer.address'></address-form>
+	<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [viewMode]='viewMode'>
+		<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="controlVisible('name')" [errorText]="'Company name is required'">
+		</bd-input>
+		<bd-dropdown [defaultLabelText]="'Customer type'" [selectedValue]="selectedCustomerType" [items]="customerTypes">
+		</bd-dropdown>
+		<bd-dropdown [defaultLabelText]="'Status'" [selectedValue]="selectedCustomerStatus" [items]="customerStatuses">
+		</bd-dropdown>
+		<bd-input [labelText]="'MC #'" formControlName="mc">
+		</bd-input>
+		<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId">
+		</bd-input>
+	</bd-form-section>
+	<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [viewMode]='viewMode'>
+		<address-form [group]='customerForm.controls.address' [address]='customer.address'></address-form>
+	</bd-form-section>
 	<div class="section">
 		<bd-button
 		type='default'
