added functionality to remove customer form and clear name or mc input value

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -22,6 +22,7 @@
        [labelText]="'Name or MC#'"
        [footerButtonText]="'Add New Customer'"
        [source]="customerSource"
+       (onRemove)="onRemove()"
        [(value)]="customerQuery"
        [itemTemplate]="customItemTemplate"
        (onSelect)="onCustomerSelect($event)"
