FSPA-90 #comment fixed styles for title labels FSPA-86 #comment removed focus event from suffix, suffix and prefix when bd-input collapsed

--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -128,6 +128,11 @@
 		.bd-input {
 			width: 0;
 
+			.bd-input-suffix,
+			.bd-input-prefix {
+				display: none;
+			}
+
 			.bd-input-infix {
 				input,
 				textarea {
