--- a/src/app/shared/components/bd-form-section/bd-form-section.component.html
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.html
@@ -1,3 +1,3 @@
-<h5 *ngIf='isLabelVisisble'>{{labelText}}</h5>
+<h5 class="customer-labels" *ngIf='isLabelVisisble'>{{labelText}}</h5>
 <ng-content>
 </ng-content>
