--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -2,9 +2,9 @@
 	<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [viewMode]='viewMode'>
 		<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="controlVisible('name')" [errorText]="'Company name is required'">
 		</bd-input>
-		<bd-dropdown [labelText]="'Customer type'" [selectedValue]="selectedCustomerType" [items]="customerTypes">
+		<bd-dropdown [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
 		</bd-dropdown>
-		<bd-dropdown [labelText]="'Status'" [selectedValue]="selectedCustomerStatus" [items]="customerStatuses">
+		<bd-dropdown [labelText]="'Status'" formControlName="status" [items]="customerStatuses">
 		</bd-dropdown>
 		<bd-input [labelText]="'MC #'" formControlName="mc">
 		</bd-input>
