--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,6 @@
 @import '../assets/styles/variables';
+@import '../../node_modules/angular2-data-table/src/components/datatable.scss';
+@import '../../node_modules/angular2-data-table/src/themes/material.scss';
 
 html,
 body {
