--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -18,6 +18,9 @@
   </template>
 
   <div class="bd-form">
+    <div class="bd-form-title">
+      Customer
+    </div>
     <bd-typeahead
        [labelText]="'Name or MC#'"
        [footerButtonText]="'Add New Customer'"
