--- a/src/app/shared/components/bd-form-section/bd-form-section.component.html
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.html
@@ -1,3 +1,7 @@
-<h5 class="customer-labels" *ngIf='isLabelVisisble'>{{labelText}}</h5>
+<div
+  *ngIf='isLabelVisisble'
+  class="bd-section-title">
+    {{labelText}}
+</div>
 <ng-content>
 </ng-content>
