--- a/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.html
+++ b/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.html
@@ -4,8 +4,8 @@
 (click)="toggleViewMode()"
 class="expandable-arrow-wrapper">
   <i
-    [class.fa-chevron-down]="editMode"
-    [class.fa-chevron-up]="!editMode"
+    [class.fa-chevron-up]="editMode"
+    [class.fa-chevron-down]="!editMode"
     class="fa expandable-arrow"
     aria-hidden="true">
   </i>
