--- a/src/app/shared/components/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-button/bd-button.component.scss
@@ -3,6 +3,17 @@
 .common {
 	width: 100%;
 	height: 50px;
+	border: 0;
+	border-bottom: $border;
+	border-radius: $default-border-radius;
+
+	&:hover {
+		cursor: pointer;
+	}
+
+	&:focus {
+		outline: 0;
+	}
 }
 
 .primary {
@@ -16,7 +27,6 @@
 }
 
 .default {
-	border: $border;
 	background: $light-grey;
 	color: $black;
 
