--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -20,7 +20,7 @@
 	position: relative;
 	z-index: 1;
 	width: 100%;
-	padding: 8px 0;
+	padding: 8px 17px;
 	border: 0;
 	background: none;
 	box-shadow: none;
@@ -45,7 +45,7 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	padding: 0 17px;
+	padding: 0;
 	min-height: $form-control-height;
 	border-bottom: $border;
 	margin-bottom: 0;
