--- a/src/app/shared/components/google-autocomplete/google-autocomplete.component.html
+++ b/src/app/shared/components/google-autocomplete/google-autocomplete.component.html
@@ -1,5 +1,6 @@
 <bd-input
-[value]="_value"
-  #bdinput placeholder="State" 
+  #bdinput
+  [ngModel]="value"
+  (ngModelChange)="changeValue($event)"
   placeholder="{{placeholder}}">
 </bd-input>
