--- a/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.html
+++ b/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.html
@@ -1,8 +1,9 @@
- <ng-content>
+<ng-content>
 </ng-content>
  <div
-(click)="toggleViewMode()"
-class="expandable-arrow-wrapper">
+  (click)="toggleViewMode()"
+  class="expandable-arrow-wrapper"
+  [class.open]="editMode">
   <i
     [class.fa-chevron-up]="editMode"
     [class.fa-chevron-down]="!editMode"
