--- a/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.scss
+++ b/src/app/shared/components/view-mode-toogle/view-mode-toogle.component.scss
@@ -4,9 +4,18 @@
 	display: flex;
 	width: 100%;
 	height: 50px;
+	background: $light-blue;
 	border-bottom: $border;
 	align-items: center;
 	justify-content: center;
+
+	&.open {
+		margin-top: 20px;
+	}
+
+	&:hover {
+		cursor: pointer;
+	}
 
 	.expandable-arrow {
 		color: $grey;
